# zubbs_play_travx_land_reg

./: .env  .gitignore  .travis.yml  9da92836-048f-44fa-943c-2e0dc4db92a9-attachment.txt  land_use_reg.xlsx  pyproject.toml  result.txt
$PWD/: 08994164-ef2e-4dd2-aba3-36d7c0f0f67c-attachment.txt  1b77ffcf-b8b7-4d3e-ae25-9b27c4ca09e3-attachment.txt  aca4ccfd-79eb-4b6f-8a12-783ced86d2c3-attachment.txt  ec82a1d3-66ac-44bb-80ae-a023d8afc0d1-attachment.txt
.circle/: config.yml
.circleci/: config.yml
